# Demo_FastApi

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: testing.yaml
src/: main.py
src/data/: init.py  tasks.py
src/model/: tasks.py
src/service/: service.py
src/web/: tasks.py  web.py
tests/: init.py  test_main.py  test_tasks.py
