[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["xGANDAx <jonathanchitivam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
mypy = "^1.13.0"
pytest = "^8.3.3"
httpie = "^3.2.4"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.mypy]
ignore_missing_imports = true